# concert-sync

./: .gitignore  AGENTS.md  Makefile  Proyecto Programado SO 2026-1.md  README.md  concert_sync.spec  concert_sync_client_mac.spec  concert_sync_mac.spec  concert_sync_server.spec  concert_sync_server_mac.spec  context.md  desktop_launcher.py  flake.nix  main.py  pyproject.toml  teacher-review.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: adr-0001-segment-a-locking-idempotency.md  avance-1.md  avance-2-checklist.md  avance-2-requerimientos.md  defensa-proyecto.md  evidencia-fase2.md  feature-reserve-multiple-seats-plan.md  manual-tecnico.md  manual_tecnico.md  plan-maestro-implementacion-v2.md  project-roadmap.md  protocol-contract-v1.md  proyecto-programado.md
frontend_pyside6/: __init__.py  __main__.py  main_window.py  server_dashboard.py
frontend_tui/: README.md  __init__.py  __main__.py  app.py  login_screen.py  styles.tcss
load-test-results/: SUMMARY.md
scripts/: CONNECT.md  build.bat  build_mac.sh  build_server.bat  build_windows_exe.ps1  deploy.sh  pyside6_entry.py  pyside6_launcher.py  run.sh  run_avance2_evidence.sh  simple_client.py
src/: __init__.py
tests/: concurrent_tests.py  conftest.py  load_generator.py  test_cancel_race.py  test_deterministic_errors.py  test_expiration_race.py  test_lock_hierarchy_core.py  test_notifications.py  test_phase1_e2e.py  test_phase2_e2e.py  test_phase3_e2e.py  test_phase6_e2e.py  test_protocol_contract.py  test_pyside6_event_log.py  test_pyside6_protocol.py  test_tickets.py  (+11 more)
(+90 files in other folders)
