[project]
name = "concert-sync"
version = "0.1.0"
description = "Python threaded-concurrency project"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
]
pyside6 = [
    "pyside6>=6.8",
]
tui = [
    "textual>=0.70.0",
]
